make taa installabe as a python package (#3)
* makes taa pip installable

* modifies setup.py

* remove theconf, pystopwatch2 from requirements.txt

* modifies __init__.py to import other modules

* fix the problem of import failure

* update version info in setup.py

* version 3.0 fixing import problem

* fix the problem of lacking . in some .py files

* modifies data.py

* new version 5.0 in setup.py

* fixes relative path problems when importing

* modifies setup.py, delete py_modules

* add version info in setup.py

* handling import problem

* corrects import in data.py

* modifies data.py

* dealing relative import problem

* corrects function search_policy definition

* fix a bug on theconf

* fix a bug on abspath(in tfidf)

* change setup.py version info

* makes taa installable as a package

* deletes cache file

* add models\

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,17 +7,16 @@ hyperopt==0.2.4
 pandas==0.24.1
 networkx==2.2
 flake8==3.7.9
-git+https://github.com/ildoonet/pystopwatch2.git
 ray==1.6.0
 pytest-runner
 ray[tune]
 fastBPE==0.1.0
 torchtext==0.6.0
 matplotlib==2.0.2
-git+https://github.com/wbaek/theconf
 sacremoses==0.0.41
 sentencepiece==0.1.86
 gorilla==0.3.0
 mlflow==1.8.0
 nlpaug==1.1.5
 aioredis==1.3.1
+datasets
