--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
-torch==1.4.0
-transformers==3.4.0
-scikit-learn==0.20.2
-nltk==3.4
-joblib==0.14.1
-hyperopt==0.2.4
-pandas==0.24.1
-networkx==2.2
-flake8==3.7.9
-ray==1.6.0
+torch>=1.4.0
+transformers>=3.4.0
+scikit-learn>=0.20.2
+nltk>=3.4
+joblib>=0.14.1
+hyperopt>=0.2.4
+pandas>=0.24.1
+networkx>=2.2
+flake8>=3.7.9
+ray>=1.6.0
 pytest-runner
 ray[tune]
-fastBPE==0.1.0
-torchtext==0.6.0
-matplotlib==2.0.2
-sacremoses==0.0.41
-sentencepiece==0.1.86
-gorilla==0.3.0
-mlflow==1.8.0
-nlpaug==1.1.5
-aioredis==1.3.1
-datasets==1.12.1
-tensorboard==2.6.0
+fastBPE>=0.1.0
+torchtext>=0.6.0
+matplotlib>=2.0.2
+sacremoses>=0.0.41
+sentencepiece>=0.1.86
+gorilla>=0.3.0
+mlflow>=1.8.0
+nlpaug>=1.1.5
+aioredis>=1.3.1
+datasets>=1.12.1
+tensorboard>=2.6.0
