--- a/taa/confs/bert_custom_data_example.yaml
+++ b/taa/confs/bert_custom_data_example.yaml
@@ -1,10 +1,10 @@
 model:
   type: Bert
 dataset:
-  path: /home/renshuhuai/text-autoaugment/taa/data/
+  path: /home/renshuhuai/text-autoaugment/taa/data
   name: custom_data
   data_dir:
-  data_files: custom_data.csv
+  data_files: {'train': 'custom_data.csv', 'test': 'custom_data.csv'}
   text_key: text
 abspath: /home/renshuhuai/text-autoaugment
 aug: imdb
